# Platinum_houds_botV4

./: README.md  discord:bot_discord.py  evaluate_model.py  ml_predictor.py  pyproject.toml  render.yaml  requirements.txt
platinum_hounds_bot/: bot.py  scraper.py
